# rest-utilities

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Hypermedia/: Crud.h  Form.cpp  Form.h  HypermediaTester.cpp  Link.cpp  Link.h
Ready4Air/DTO/: Bundle.h  Catalogue.h  Content.h  CriticsQuote.h  Entitlement.h  EpgInfo.h  Episode.h  Error.h  ErrorForm.h  Event.h  File.h  FileBase.h  FreePage.h  Genre.h  Help.h  Language.h  ListMedia.h  LiveSection.h  Manifests.h  MenuItem.h  Movie.h  Mp4File.h  PaymentData.h  PlaySubtitle.h  ProtectionData.h  PurchaseItem.h  QuoteImages.h  Season.h  Series.h  SmoothManifest.h  Subtitle.h  Teaser.h  UserFavouriteLists.h  UserListItem.h
Ready4Air/DTO/Abstract/: JsonDeserializable.h
Ready4Air/DTO/Hypermedia/: Crud.cpp  Crud.h  Form.cpp  Form.h  HypermediaTester.cpp  Link.cpp  Link.h
Ready4Air_tmp/DTO_tmp/: Bookmark.h  Cast.h  DRM.h  Device.h  Display.h  HlsManifest.h  LanguageList.h  Literal.h  Page.h  PurchaseInfo.h  SeasonProduct.h  Section.h  UserList.h  UserRating.h  WmvFile.h
Urltemplate/: UrlTemplate.cpp  UrlTemplate.h  UrlTemplateTester.cpp
include/maybe/: Maybe.h
include/ready4air/: common.h  dto.h  external.h  hypermedia.h  predefs.h  services.h  urltemplate.h
input/: GenericPage.json
ready4air/common/: Either.h  Maybe.h  Predefine_YouI.h  Regex.h
ready4air/dto/: Bookmark.h  Bundle.h  Button.h  Cast.h  Catalogue.h  Channel.h  Content.h  CriticsQuote.h  DRM.h  Device.h  DeviceAuthData.h  Display.h  Entitlement.h  EpgInfo.h  Episode.h  Error.h  ErrorForm.h  Event.h  File.h  FileBase.h  FreePage.h  GenericPage.h  Genre.h  Help.h  HlsManifest.h  Image.h  Language.h  LanguageList.h  List.h  ListMedia.h  Literal.h  LiveSection.h  Manifest.h  Manifests.h  MediaProduct.h  MenuItem.h  Movie.h  Mp4File.h  Page.h  PaymentData.h  (+24 more)
ready4air/dto/abstract/: JsonDeserializable.h  JsonSerializable.h
ready4air/dto/hypermedia/: Crud.h  Form.h  Link.h
ready4air/maybe/: Maybe.h
ready4air/services/: BundlesService.h  DevicesService.h  Error.h  HelpsService.h  LiteralsService.h  MediasService.h  MoviesService.h  PagesService.h  PaginationService.h  RequestService.h  Root.h  SeriesService.h  UsersService.h
ready4air/services/exceptions/: BadEventPayloadType.h  BadEventType.h  BadHttpClientType.h  BadPaginatedType.h
ready4air/tests/: HypermediaTester.cpp  MaybeTester.cpp  Ready4AirTester.cpp  RegexTester.cpp  UrlTemplateTester.cpp
ready4air/tests/dto/: DTO.cpp  FormTest.h  ServiceRoot.h
ready4air/tests/services/: AuthDeviceEvent.h  EventPayload.h  HttpClient.h  Root.cpp
ready4air/tools/: concat.sh  createroot.sh  depends.sh
ready4air/urltemplate/: UrlTemplate.h
tests/: MaybeTester.cpp
